<?xml version="1.0"?>
<package format="3">
  <name>lambda07_bringup</name>
  <version>0.1.0</version>
  <description>Kinesis bringup, RViz, and udev support for the Force Dimension Lambda.07 haptic device.</description>
  <maintainer email="ctp@nyu.edu">Kinesis CTP</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>fd_bringup</exec_depend>
  <exec_depend>fd_controllers</exec_depend>
  <exec_depend>fd_description</exec_depend>
  <exec_depend>fd_hardware</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

